calendarService/src/main/java/com/example/calendarService/exception/commonException/error/ErrorCode.java
package com.example.calendarService.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
